fix: homepage top margin too large

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,4 @@
 .home {
-  margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
   max-width: 1080px;
